# pawdf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  skills-lock.json
.github/workflows/: release.yml
docs/: RELEASING.md  USER_GUIDE.md
scripts/: bundle-assets.mjs
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
