[package]
name = "pawdf"
version = "0.1.0"
description = "Local, offline PDF chat powered by llama.cpp"
edition = "2021"

[lib]
name = "pawdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["time"] }
futures-util = "0.3"
